syntax = "proto3";
option go_package = "rpcserver";

message GetRequest {
    string uri = 1;
}

message GetResponse {
    string data = 1;
    string owner = 2;
    uint64 createdAt = 3;
    uint64 lastUpdatedAt = 4;
}

message PutRequest {
    string type = 1;
    string id = 2;
    string data = 3;
    bytes signature = 4;
}

message PutResponse {
    bool created = 1;
    uint64 feeUsed = 2;
}

service API {
    rpc GetObject(GetRequest) returns (GetResponse) {}
    rpc PutObject(PutRequest) returns (PutResponse) {}
}
